fixed selector and reg page spacing

--- a/src/components/channel.css
+++ b/src/components/channel.css
@@ -39,12 +39,12 @@
 .styled-select {
 	background-color:#DBBC34;
 	color: #122375;
-	height: 3rem;
+	height: 4rem;
 	overflow: hidden;
 	width: 24rem;
-font-size: 1.7rem;
+	font-size: 1.7rem;
 	padding: 1rem;
-	-webkit-border-radius: 3rem;
-		-moz-border-radius: 3rem;
-		border-radius: 3rem;
+	-webkit-border-radius: 1rem;
+		-moz-border-radius: 1rem;
+		border-radius: 1rem;
 }
